human_written_tests/WebAssembly/processed_control_flow_validation/test_return_2.wast
(assert_invalid
  (module
    (func $type-value-empty-vs-num-in-block (result i32)
      (i32.const 0)
      (block (return))
    )
  )
  "type mismatch"
)